--- a/src/app/components/default-login-layout/default-login-layout.component.html
+++ b/src/app/components/default-login-layout/default-login-layout.component.html
@@ -27,7 +27,7 @@
                 </button>
               </div>
               <div class="links">
-                <button type="redirectToCadastro()" class="register">Não está cadastrado?</button>
+                <a class="left-link" routerLink="/register" >Não está cadastrado?</a>
                 <a class="right-link" routerLink="/forgot-password">Esqueceu sua senha?</a>
               </div>
             </div>
