--- a/src/app/components/default-login-layout/default-login-layout.component.sass
+++ b/src/app/components/default-login-layout/default-login-layout.component.sass
@@ -109,12 +109,11 @@ label
   margin-top: 5px;
 
 
-.register 
+.left-link 
   color: #ffd369;
   opacity: 0.8;
   font-family: 'Poppins';
   margin-top: 4px
-  background-color: #1a1a2e;
 
 
 .right-link 
