--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -2,7 +2,7 @@
     <div class="form-box">
       <h1 class="logo">LUMIBOX</h1>
       <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-        <label for="email">Email</label>
+        <label for="email" style="color: aliceblue;">Email</label>
         <input id="email" type="email" formControlName="email" />
         <label for="password">Senha</label>
         <div class="password-wrapper">
