--- a/src/styles.sass
+++ b/src/styles.sass
@@ -18,3 +18,9 @@ app-root
   display: block
   height: 100%
 
+label 
+  display: block;
+  margin-bottom: 10px;
+  font-family: 'Poppins';
+  opacity: 0.8;
+  font-weight: 300;
