--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,9 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 *
-    padding: 0
-    margin: 0
-    box-sizing: border-box
+  padding: 0
+  margin: 0
+  box-sizing: border-box
 
 
 html, body 
@@ -18,9 +20,93 @@ app-root
   display: block
   height: 100%
 
-label 
-  display: block;
-  margin-bottom: 10px;
-  font-family: 'Poppins';
-  opacity: 0.8;
-  font-weight: 300;
+
+.global-label
+  display: block
+  margin-bottom: 10px
+  font-family: 'Poppins'
+  opacity: 0.8
+  font-weight: 300
+  //margin-bottom: 20px
+
+.form-group 
+  margin-bottom: 20px
+  text-align: left
+
+
+.toggle-password 
+  position: absolute
+  right: 10px
+  top: 50%
+  transform: translateY(-50%)
+  background: none
+  border: none
+  cursor: pointer
+  color: #fff
+
+.global-container 
+  background-color:#1a1a2e
+  padding: 40px
+  border-radius: 10px
+  max-width: 40vw
+  width: 100%
+  text-align: center
+
+.global-main 
+  display: flex
+  justify-content: center
+  align-items: center
+  height: 100vh
+  background-color: #1a1a2e
+  color: #fff
+
+.global-form-section 
+  width: 100%
+  display: flex
+  justify-content: center
+  align-items: center
+
+.global-logo 
+  font-size: 50px
+  font-weight: bold
+  filter: opacity (0.8)
+  color: #d12642
+  margin-bottom: 30px
+  font-family: 'Cinzel Decorative'
+  opacity: 0.8
+
+.password-wrapper 
+  position: relative
+
+.global-button 
+  width: 100%
+  padding: 12px
+  background-color: #002d62
+  color: #fff
+  border-color: #ffffff86
+  border-radius: 8px 0 0 8px /* top-left, bottom-left arredondados */
+  font-size: 16px
+  cursor: pointer
+  font-family: 'Poppins'
+  opacity: 0.8
+  font-weight: 300
+  margin-top: 30px
+
+
+#email
+  width: 100%
+  padding: 10px
+  border-radius: 5px
+  border: 1px solid #4a4a6a
+  background-color: #1a1c36
+  color: #fff
+  font-family: 'Poppins'
+
+#password
+  width: 100%
+  padding: 10px
+  border-radius: 5px
+  border: 1px solid #4a4a6a
+  background-color: #1a1c36
+  color: #fff
+  font-family: 'Poppins'
