--- a/src/app/components/default-login-layout/default-login-layout.component.sass
+++ b/src/app/components/default-login-layout/default-login-layout.component.sass
@@ -2,157 +2,173 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 *
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+  margin: 0
+  padding: 0
+  box-sizing: border-box
 
-.login-main 
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  background-color: #1a1a2e;
-  color: #fff;
+.login-main //trocar para global-main
+  display: flex
+  justify-content: center
+  align-items: center
+  height: 100vh
+  background-color: #1a1a2e
+  color: #fff
 
 
-.login-form-section 
+.login-form-section //trocar para global-form-section
   width: 100%
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: flex
+  justify-content: center
+  align-items: center
 
 
 .branding-section 
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-color: #001f4d;
-  color: white;
-  text-align: center;
+  flex: 1
+  display: flex
+  flex-direction: column
+  justify-content: center
+  align-items: center
+  background-color: #001f4d
+  color: white
+  text-align: center
   
 
 
-.login-container 
-  background-color:#1a1a2e;
-  padding: 40px;
-  border-radius: 10px;
-  max-width: 40vw;
-  width: 100%;
-  text-align: center;
+.login-container //trocar para global-container
+  background-color:#1a1a2e
+  padding: 40px
+  border-radius: 10px
+  max-width: 40vw
+  width: 100%
+  text-align: center
 
 
-.logo 
-  font-size: 50px;
-  font-weight: bold;
-  filter: opacity (0.8);
-  color: #d12642;
-  margin-bottom: 30px;
-  font-family: 'Cinzel Decorative';
-  opacity: 0.8;
+.global-logo 
+  font-size: 50px
+  font-weight: bold
+  filter: opacity (0.8)
+  color: #d12642
+  margin-bottom: 30px
+  font-family: 'Cinzel Decorative'
+  opacity: 0.8
   
 
 
 .form-group 
-  margin-bottom: 20px;
-  text-align: left;
+  margin-bottom: 20px
+  text-align: left
 
 
 label 
-  display: block;
-  margin-bottom: 10px;
-  font-family: 'Poppins';
-  opacity: 0.8;
-  font-weight: 300;
+  display: block
+  margin-bottom: 10px
+  font-family: 'Poppins'
+  opacity: 0.8
+  font-weight: 300
 
 
 #username
-  width: 100%;
-  padding: 10px;
+  width: 100%
+  padding: 10px
   margin-bottom: 20px
-  border-radius: 5px;
-  border: 1px solid #4a4a6a;
-  background-color: #1a1c36;
-  color: #fff;
-  font-family: 'Poppins';
+  border-radius: 5px
+  border: 1px solid #4a4a6a
+  background-color: #1a1c36
+  color: #fff
+  font-family: 'Poppins'
 
 #password
-  width: 100%;
-  padding: 10px;
-  border-radius: 5px;
-  border: 1px solid #4a4a6a;
-  background-color: #1a1c36;
-  color: #fff;
-  font-family: 'Poppins';
+  width: 100%
+  padding: 10px
+  border-radius: 5px
+  border: 1px solid #4a4a6a
+  background-color: #1a1c36
+  color: #fff
+  font-family: 'Poppins'
 
 .password-wrapper 
-  position: relative;
+  position: relative
 
 
 .toggle-password 
-  position: absolute;
-  right: 10px;
-  top: 50%;
-  transform: translateY(-50%);
-  background: none;
-  border: none;
-  cursor: pointer;
-  color: #fff;
+  position: absolute
+  right: 10px
+  top: 50%
+  transform: translateY(-50%)
+  background: none
+  border: none
+  cursor: pointer
+  color: #fff
   
 
 
 .links 
-  display: flex;
-  justify-content: space-between;
-  font-size: 0.9em;
-  margin-top: 5px;
+  display: flex
+  justify-content: space-between
+  font-size: 0.9em
+  margin-top: 5px
 
 
 .left-link 
-  color: #ffd369;
-  opacity: 0.8;
-  font-family: 'Poppins';
+  color: #ffd369
+  opacity: 0.8
+  font-family: 'Poppins'
   margin-top: 4px
+  text-decoration: none
+  
 
 
 .right-link 
-  color: #c0213d;
-  font-family: 'Poppins';
-  margin-top: 4px;
+  color: #c0213d
+  font-family: 'Poppins'
+  margin-top: 4px
+  text-decoration: none
+
 
 .btns 
-  display: flex;
+  display: flex
 
-.login-button 
-  width: 100%;
-  padding: 12px;
-  background-color: #002d62;
-  color: #fff;
-  border-color: #ffffff86;
-  border-radius: 8px 0 0 8px; /* top-left, bottom-left arredondados */
-  font-size: 16px;
-  cursor: pointer;
-  font-family: 'Poppins';
-  opacity: 0.8;
-  font-weight: 300;
-  margin-top: 30px;
+.login-button //talvez trocar para global-button
+  width: 100%
+  padding: 12px
+  background-color: #002d62
+  color: #fff
+  border-color: #ffffff86
+  border-radius: 8px 0 0 8px /* top-left, bottom-left arredondados */
+  font-size: 16px
+  cursor: pointer
+  font-family: 'Poppins'
+  opacity: 0.8
+  font-weight: 300
+  margin-top: 30px
+
+  &:hover
+    transform: scale(1.1)
+    transition: transform 0.3s ease
+    margin-right: 20px
+
+    
 
 .login-google
-  border-radius: 20 20px 20px 0; /* top-right, bottom-right arredondados */
-  width: 100%;
-  padding: 12px;
-  background-color: #1a1a2e;
-  color: #fff;
-  border-color: #ffffff86;
-  border-radius: 0 8px 8px 0; /* mais exagerado, arredondamento mais evidente */
-  font-size: 16px;
-  cursor: pointer;
-  font-family: 'Poppins';
-  opacity: 0.8;
-  font-weight: 300;
-  margin-top: 30px;
-  display: flex;
-  justify-content: center;
+  border-radius: 20 20px 20px 0 /* top-right, bottom-right arredondados */
+  width: 100%
+  padding: 12px
+  background-color: #1a1a2e
+  color: #fff
+  border-color: #ffffff86
+  border-radius: 0 8px 8px 0 /* mais exagerado, arredondamento mais evidente */
+  font-size: 16px
+  cursor: pointer
+  font-family: 'Poppins'
+  opacity: 0.8
+  font-weight: 300
+  margin-top: 30px
+  display: flex
+  justify-content: center
   gap: 10px
 
+  
+  &:hover
+    transform: scale(1.1)
+    transition: transform 0.3s ease
+    margin-left: 20px
