--- a/src/app/components/register/register.component.sass
+++ b/src/app/components/register/register.component.sass
@@ -1,73 +1,39 @@
-body, html 
-  margin: 0;
-  padding: 0;
-  font-family: 'Arial', sans-serif;
-  background-color: #0c0c24;
-  color: white;
-  height: 100vh;
 
 
-.container 
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
+/*.container
+  display: flex
+  justify-content: center
+  align-items: center
+  height: 100%
+  background-color: #aa7f7f
+  
+
+/*.form-box
+  background-color: #030333
+  padding: 2rem
+  border-radius: 8px
+  width: 100%
+  max-width: 400px
 
 
-.form-box 
-  background-color: #0c0c24;
-  padding: 2rem;
-  border-radius: 8px;
-  width: 100%;
-  max-width: 400px;
+/*.password-wrapper
+  position: relative
 
+/*.password-wrapper i
+  position: absolute
+  top: 50%
+  right: 10px
+  transform: translateY(-50%)
+  cursor: pointer
+  color: #cc2952
 
-.logo 
-  text-align: center;
-  color: #cc2952;
-  font-family: 'Georgia', serif;
-  font-size: 2rem;
-  margin-bottom: 2rem;
+button
+  padding: 0.7rem
+  border: none
+  border-radius: 5px
+  color: white
+  font-weight: bold
+  cursor: pointer
 
-
-form 
-  display: flex;
-  flex-direction: column;
-  gap: 1.5rem;
-
-
-label 
-  font-size: 0.9rem;
-  margin-bottom: 0.3rem;
-
-
-input 
-  padding: 0.6rem;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  background-color: #0c0c24;
-  color: white;
-
-
-.password-wrapper 
-  position: relative;
-
-
-.password-wrapper i 
-  position: absolute;
-  top: 50%;
-  right: 10px;
-  transform: translateY(-50%);
-  cursor: pointer;
-  color: #cc2952;
-
-
-button 
-  padding: 0.7rem;
-  border: none;
-  border-radius: 5px;
-  background-color: #012a57;
-  color: white;
-  font-weight: bold;
-  cursor: pointer;
-
+#Confirm-Pass  
+  margin-top: 10px
